# matmod

./: README.md
lab1/: .gitignore  ReadME.md  lab1.py  requirements.txt  ~$чет лаба 1.docx  Отчет лаба 1.docx
lab2/: .gitignore  ReadME.md  init.bat  lab2.py  pyproject.toml  requirements.txt  ~$чет лаба 2.docx  Отчет лаба 2.docx  ПИН-43_Стадник_ЛР2.docx
lab3/: .gitignore  lab3.py  pyproject.toml  ПИН-43_Стадник_ЛР3.docx
lab4/: lab4.py  pyproject.toml  ПИН-43_Стадник_ЛР4.docx
lab5/: .gitignore  README.md  lab5.py  pyproject.toml  ПИН-43_Стадник_ЛР5.docx
lab6/: .gitignore  README.md  lab6.py  pyproject.toml  ПИН-43_Стадник_ЛР6.docx
lab7/: lab7.py  pyproject.toml  ПИН-43_Стадник_ЛР7.docx
