[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["Aleksandr <sanchasyo@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.1"
numpy = "^1.23.4"

[tool.poetry.scripts]
lab = "lab2:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
