[tool.poetry]
name = "lab7"
version = "0.1.0"
description = ""
authors = ["Aleksandr <36007931+7StaSH7@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
scipy = "^1.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lab = "lab7:main"